--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,7 @@ include(debug_flags)
 
 add_subdirectory(src)
 add_subdirectory(include)
+add_subdirectory(cmake)
 
 if(WITH_TESTS)
   add_subdirectory(tests)
