Add curl as dependency to CMake config and pkg-config recipe.

--- a/pkg-config/mastodonpp.pc.in
+++ b/pkg-config/mastodonpp.pc.in
@@ -9,3 +9,4 @@ Description: @PROJECT_DESCRIPTION@
 Version: @PROJECT_VERSION@
 Cflags: -I${includedir}
 Libs: -L${libdir} -l${name}
+Requires: libcurl
