--- a/.drone.yml
+++ b/.drone.yml
@@ -26,7 +26,7 @@ steps:
   - alias apt-get='rm -f /var/cache/apt/archives/lock && apt-get'
   - apt-get update -q
   - apt-get install -qq build-essential cmake
-  - apt-get install -qq catch
+  - apt-get install -qq catch libcurl4-openssl-dev
   - rm -rf build && mkdir -p build && cd build
   - cmake -G "Unix Makefiles" -DWITH_TESTS=YES ..
   - make VERBOSE=1
@@ -49,7 +49,7 @@ steps:
   - alias apt-get='rm -f /var/cache/apt/archives/lock && apt-get'
   - apt-get update -q
   - apt-get install -qq build-essential cmake
-  - apt-get install -qq catch
+  - apt-get install -qq catch libcurl4-openssl-dev
   - rm -rf build && mkdir -p build && cd build
   - cmake -G "Unix Makefiles" -DWITH_TESTS=YES ..
   - make VERBOSE=1
