--- a/.drone.yml
+++ b/.drone.yml
@@ -13,7 +13,7 @@ trigger:
     - tag
 
 steps:
-- name: GCC 8 on Debian buster
+- name: GCC 8 / clang 7
   image: debian:buster-slim
   pull: always
   environment:
@@ -25,10 +25,16 @@ steps:
   - rm /etc/apt/apt.conf.d/docker-clean
   - alias apt-get='rm -f /var/cache/apt/archives/lock && apt-get'
   - apt-get update -q
-  - apt-get install -qq build-essential cmake
+  - apt-get install -qq build-essential cmake clang
   - apt-get install -qq catch libcurl4-openssl-dev
   - rm -rf build && mkdir -p build && cd build
   - cmake -G "Unix Makefiles" -DWITH_TESTS=YES ..
+  - make VERBOSE=1
+  - make install DESTDIR=install
+  - cd tests && ctest -V
+  - cd ../../
+  - rm -rf build && mkdir -p build && cd build
+  - CXX="clang++" cmake -G "Unix Makefiles" -DWITH_TESTS=YES ..
   - make VERBOSE=1
   - make install DESTDIR=install
   - cd tests && ctest -V
@@ -36,7 +42,7 @@ steps:
   - name: debian-package-cache
     path: /var/cache/apt/archives
 
-- name: GCC 7 on Ubuntu bionic
+- name: GCC 7 / clang 6
   image: ubuntu:bionic
   pull: always
   environment:
@@ -48,10 +54,16 @@ steps:
   - rm /etc/apt/apt.conf.d/docker-clean
   - alias apt-get='rm -f /var/cache/apt/archives/lock && apt-get'
   - apt-get update -q
-  - apt-get install -qq build-essential cmake
+  - apt-get install -qq build-essential cmake clang
   - apt-get install -qq catch libcurl4-openssl-dev
   - rm -rf build && mkdir -p build && cd build
   - cmake -G "Unix Makefiles" -DWITH_TESTS=YES ..
+  - make VERBOSE=1
+  - make install DESTDIR=install
+  - cd tests && ctest -V
+  - cd ../../
+  - rm -rf build && mkdir -p build && cd build
+  - CXX="clang++" cmake -G "Unix Makefiles" -DWITH_TESTS=YES ..
   - make VERBOSE=1
   - make install DESTDIR=install
   - cd tests && ctest -V
