--- a/.drone.yml
+++ b/.drone.yml
@@ -28,13 +28,13 @@ steps:
   - apt-get install -qq build-essential cmake clang
   - apt-get install -qq catch libcurl4-openssl-dev
   - rm -rf build && mkdir -p build && cd build
-  - cmake -G "Unix Makefiles" -DWITH_TESTS=YES ..
+  - cmake -G "Unix Makefiles" -DWITH_TESTS=YES -DWITH_EXAMPLES=YES ..
   - make VERBOSE=1
   - make install DESTDIR=install
   - cd tests && ctest -V
   - cd ../../
   - rm -rf build && mkdir -p build && cd build
-  - CXX="clang++" cmake -G "Unix Makefiles" -DWITH_TESTS=YES ..
+  - CXX="clang++" cmake -G "Unix Makefiles" -DWITH_TESTS=YES -DWITH_EXAMPLES=YES ..
   - make VERBOSE=1
   - make install DESTDIR=install
   - cd tests && ctest -V
@@ -57,13 +57,13 @@ steps:
   - apt-get install -qq build-essential cmake clang
   - apt-get install -qq catch libcurl4-openssl-dev
   - rm -rf build && mkdir -p build && cd build
-  - cmake -G "Unix Makefiles" -DWITH_TESTS=YES ..
+  - cmake -G "Unix Makefiles" -DWITH_TESTS=YES -DWITH_EXAMPLES=YES ..
   - make VERBOSE=1
   - make install DESTDIR=install
   - cd tests && ctest -V
   - cd ../../
   - rm -rf build && mkdir -p build && cd build
-  - CXX="clang++" cmake -G "Unix Makefiles" -DWITH_TESTS=YES ..
+  - CXX="clang++" cmake -G "Unix Makefiles" -DWITH_TESTS=YES -DWITH_EXAMPLES=YES ..
   - make VERBOSE=1
   - make install DESTDIR=install
   - cd tests && ctest -V
