Add streaming support.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 include(GNUInstallDirs)
 
-find_package(CURL REQUIRED)
+find_package(CURL 7.32 REQUIRED)
 
 # Write version in header.
 configure_file ("version.hpp.in"
