--- a/pkg-config/mastodonpp.pc.in
+++ b/pkg-config/mastodonpp.pc.in
@@ -1,10 +1,8 @@
-name=@PROJECT_NAME@
 prefix=@CMAKE_INSTALL_PREFIX@
-exec_prefix=${prefix}
 libdir=${prefix}/@CMAKE_INSTALL_LIBDIR@
 includedir=${prefix}/@CMAKE_INSTALL_INCLUDEDIR@
 
-Name: ${name}
+Name: @PROJECT_NAME@
 Description: @PROJECT_DESCRIPTION@
 Version: @PROJECT_VERSION@
 Cflags: -I${includedir}
