--- a/pkg-config/mastodonpp.pc.in
+++ b/pkg-config/mastodonpp.pc.in
@@ -1,8 +1,9 @@
+name=@PROJECT_NAME@
 prefix=@CMAKE_INSTALL_PREFIX@
 libdir=${prefix}/@CMAKE_INSTALL_LIBDIR@
 includedir=${prefix}/@CMAKE_INSTALL_INCLUDEDIR@
 
-Name: @PROJECT_NAME@
+Name: ${name}
 Description: @PROJECT_DESCRIPTION@
 Version: @PROJECT_VERSION@
 Cflags: -I${includedir}
